syntax = "proto3";

package com.ndgndg91.grpc.stub.product;

option java_multiple_files = true;
option java_package = "com.ndgndg91.grpc.stub.product";


service ProductService {
  rpc createProduct(CreateProductRequest) returns (ProductId);
  rpc findById(ProductId) returns (Product);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  uint64 price = 3;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  uint64 price = 4;
  uint64 createdAt = 5;
}

message ProductId {
  string id = 1;
}